update UI and functions of LUCY project